fclash/dist/libclash.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/kingtous/flutter-clash-binding */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "lib.go"

#include "stdint.h"

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern GoInt clash_init(char* home_dir);
extern GoInt set_config(char* config_path);
extern GoInt set_home_dir(char* home);
extern char* get_config();
extern GoInt set_ext_controller(GoUint64 port);
extern void clear_ext_options();
extern GoInt is_config_valid(char* config_path);
extern char* get_all_connections();
extern void close_all_connections();
extern GoUint8 close_connection(char* id);
extern GoUint8 parse_options();
extern char* get_traffic();
extern void init_native_api_bridge(void* api);
extern void start_log(long long port);
extern void stop_log();
extern long change_proxy(char* selector_name, char* proxy_name);
extern long change_config_field(char* s);
extern void async_test_delay(char* proxy_name, char* url, long timeout, long long port);
extern char* get_proxies();
extern char* get_providers();
extern char* get_configs();

#ifdef __cplusplus
}
#endif